--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My React.js Projects</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./img/project (1).png" type="image/x-icon">
 </head>
 <body>
   <div class="container">
